--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>DevOps is Awesome</h1>
+        <h1>My To-Do List</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
