--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>Add your To-Do List</title>
+        <title>My To-Do List</title>
         <style>
             a {
                 text-decoration: none;
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>My List</h1>
+        <h1>Create your List</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
